--- a/html/esbozo-perfil-gpt.html
+++ b/html/esbozo-perfil-gpt.html
@@ -47,6 +47,6 @@
     © 2023 TuNombre. Todos los derechos reservados.
 </footer>
 
-<script src="script.js"></script>
+<script src="../js/esbozo-perfil-gpt.js"></script>
 </body>
 </html>
