readme e imagenes boceto

--- a/html/esbozo-perfil-gpt.html
+++ b/html/esbozo-perfil-gpt.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./styles/asana-style.css">
+    <link rel="stylesheet" href="../styles/asana-style.css">
     <title>Página de Perfil de Usuario</title>
 </head>
 <body>
@@ -33,7 +33,7 @@
 
         <!-- Contenido principal -->
         <div class="col-md-9">
-            <img src="./images/DALL·E 2023-10-13 22.17.44 - Photo of a quirky and comedic character with exaggerated glasses, a funny hat, and a big smile, appropriate for a user interface profile picture.png" alt="Imagen de perfil" class="rounded-circle mb-3" width="100">
+            <img src="../images/quircty-commedian.png" alt="Imagen de perfil" class="rounded-circle mb-3" width="100">
             <h2>Nombre Apellido</h2>
             <textarea id="descriptionArea" class="form-control mb-3" rows="4" placeholder="Descripción larga..." readonly></textarea>
             <button class="btn btn-dark" onclick="toggleEditMode()">Editar Perfil</button>
