--- a/html/user-profile.html
+++ b/html/user-profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil del Usuario</title>
-    <link rel="stylesheet" href="asana-styles.css">
+    <link rel="stylesheet" href="../styles/asana-style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -27,7 +27,7 @@
                 </div>
             </aside>
             <main class="col-md-9">
-                <img src="./images/DALL·E 2023-10-13 22.17.44 - Photo of a quirky and comedic character with exaggerated glasses, a funny hat, and a big smile, appropriate for a user interface profile picture.png" alt="Imagen de perfil" class="rounded-circle mb-3" width="150">
+                <img src="../images/quircty-commedian.png" alt="Imagen de perfil" class="rounded-circle mb-3" width="150">
                 <h2>Nombre</h2>
                 <h2>Apellidos</h2>
                 <textarea class="form-control mb-3" rows="4">Descripción larga...</textarea>
